<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:src="@drawable/vault_4"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription" />



    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03"
        tools:layout_editor_absoluteY="@dimen/margin_15"
        tools:layout_editor_absoluteX="0dp" />



    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline8"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="180dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline15"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17"
        tools:layout_editor_absoluteY="87dp"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_45"
        android:ems="10"
        android:textColor="@color/white"
        android:paddingStart="@dimen/margin_20"
        android:paddingEnd="@dimen/margin_1"
        android:background="@drawable/rounded_border_edit_text"
        android:hint="@string/first"
        android:textColorHint="@color/gray"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline16"
        app:layout_constraintRight_toLeftOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline15"
        android:layout_marginTop="32dp"
        android:visibility="visible"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline16"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03888889"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="14dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline17"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="346dp" />

    <EditText
        android:id="@+id/lname"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_45"
        android:paddingStart="@dimen/margin_20"
        android:paddingEnd="@dimen/margin_1"
        android:ems="10"
        android:textColorHint="@color/Gray"
        android:textColor="@color/white"
        android:background="@drawable/rounded_border_edit_text"
        android:hint="@string/last"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline16"
        app:layout_constraintRight_toLeftOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/fname"
        android:visibility="visible"
        />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/app_theme_color"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline16"
        app:layout_constraintRight_toLeftOf="@+id/guideline17"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        android:visibility="visible"
        android:textStyle="bold"
        android:layout_marginBottom="24dp" />


    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline20"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"
        tools:layout_editor_absoluteY="485dp"
        tools:layout_editor_absoluteX="0dp" />


    <TextView
        android:id="@+id/tv_already_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="@dimen/toolbar_playlist_text_size"
        android:layout_marginLeft="@dimen/toolbar_playlist_text_size"
        android:layout_marginRight="@dimen/toolbar_playlist_text_size"
        android:layout_marginStart="@dimen/toolbar_playlist_text_size"
        android:text="@string/already_registered"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline8"
        app:layout_constraintRight_toLeftOf="@+id/guideline17"

        />

    <EditText
        android:id="@+id/yob"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_45"
        android:background="@drawable/rounded_border_edit_text"
        android:ems="10"
        android:hint="@string/birth_year"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/margin_20"
        android:paddingEnd="@dimen/margin_1"
        android:textColor="@color/white"
        android:textColorHint="@color/Gray"
        app:layout_constraintLeft_toLeftOf="@+id/guideline16"
        app:layout_constraintTop_toBottomOf="@+id/lname"
        app:layout_constraintRight_toLeftOf="@+id/guideline8"
        android:visibility="visible"
        />

    <com.reginald.editspinner.EditSpinner
        android:id="@+id/edit_spinner"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_45"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/gender"
        android:paddingStart="@dimen/margin_20"
        android:paddingEnd="@dimen/margin_1"
        android:textColor="@color/white"
        android:textColorHint="@color/Gray"
        android:focusable="false"
        android:background="@drawable/rounded_border_edit_text"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline8"
        app:layout_constraintRight_toLeftOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/lname"
        android:visibility="visible"
       />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline42"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72"
        tools:layout_editor_absoluteY="368dp"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_45"
        android:ems="10"
        android:paddingStart="@dimen/margin_20"
        android:paddingEnd="@dimen/margin_1"
        android:textColor="@color/white"
        android:textColorHint="@color/Gray"
        android:background="@drawable/rounded_border_edit_text"
        android:inputType="textPersonName"
        android:hint="@string/e_mail"
        app:layout_constraintLeft_toLeftOf="@+id/guideline16"
        app:layout_constraintRight_toLeftOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/yob"
        app:layout_constraintHorizontal_bias="0.0"
        android:visibility="visible"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_45"
        android:ems="10"
        android:inputType="textPersonName|textNoSuggestions"
        android:hint="@string/username"
        android:background="@drawable/rounded_border_edit_text"
        android:textColorHint="@color/Gray"
        android:paddingStart="@dimen/margin_20"
        android:paddingEnd="@dimen/margin_1"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@+id/guideline16"
        app:layout_constraintRight_toLeftOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        android:visibility="visible"
        />


    <RelativeLayout
        android:id="@+id/rr_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_45"
        app:layout_constraintLeft_toLeftOf="@+id/guideline16"
        app:layout_constraintRight_toLeftOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/username">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:background="@drawable/rounded_border_edit_text"
            android:inputType="textPassword|textNoSuggestions"
            android:hint="@string/signup_password"
            android:textAllCaps="false"
            android:textColorHint="@color/Gray"
            android:paddingStart="@dimen/margin_20"
            android:paddingEnd="@dimen/margin_1"
            android:textColor="@color/white"
            android:visibility="visible"
            />

        <ImageView
            android:id="@+id/image_view_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/activity_top_margin"
            android:layout_alignEnd="@+id/password"
            android:clickable="true"
            android:src="@drawable/eye_on"
            tools:ignore="ContentDescription" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rr_confirm_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_45"
        app:layout_constraintLeft_toLeftOf="@+id/guideline16"
        app:layout_constraintRight_toLeftOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/rr_password"
        >


    <EditText
        android:id="@+id/confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:inputType="textPassword|textNoSuggestions"
        android:hint="@string/confirm_password"
        android:background="@drawable/rounded_border_edit_text"
        android:textColorHint="@color/Gray"
        android:paddingStart="@dimen/margin_20"
        android:paddingEnd="@dimen/margin_1"
        android:textColor="@color/white"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        android:visibility="visible"
        />

        <ImageView
            android:id="@+id/image_view_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/activity_top_margin"
            android:layout_alignEnd="@+id/confirm_pass"
            android:clickable="true"
            android:src="@drawable/eye_on"
            tools:ignore="ContentDescription" />


    </RelativeLayout>


    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0">



        <include
            android:id="@+id/splash_text"
            layout="@layout/splash_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.62"
            app:layout_constraintTop_toBottomOf="@+id/llToast"
            android:layout_marginTop="@dimen/margin_30" />

        <include
            android:id="@+id/llToast"
            layout="@layout/toast_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

    </FrameLayout>

    <Button
        android:id="@+id/tv_sign_up_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintTop_toTopOf="@+id/guideline42"
        android:background="@color/app_theme_color"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintRight_toLeftOf="@+id/guideline17"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@+id/guideline16"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.244"
        android:textStyle="bold"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_upload_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_profile_photo"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintRight_toLeftOf="@+id/guideline17"
        app:layout_constraintLeft_toLeftOf="@+id/guideline16"
        app:layout_constraintTop_toTopOf="@+id/guideline15"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/toolbar_playlist_text_size"
        app:layout_constraintTop_toBottomOf="@+id/tv_upload_photo"
        android:layout_marginLeft="@dimen/toolbar_playlist_text_size"
        app:layout_constraintLeft_toLeftOf="@+id/guideline16"
        app:layout_constraintRight_toLeftOf="@+id/guideline17"
        android:layout_marginRight="@dimen/toolbar_playlist_text_size"
        android:layout_marginBottom="@dimen/toolbar_playlist_text_size"
        app:layout_constraintBottom_toTopOf="@+id/guideline42"
        app:layout_constraintHorizontal_bias="1.0"
        android:visibility="visible"
        app:layout_constraintVertical_bias="0.56"
        android:layout_marginStart="@dimen/toolbar_playlist_text_size"
        android:layout_marginEnd="@dimen/toolbar_playlist_text_size">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_top_margin"
            android:layout_marginTop="@dimen/activity_top_margin"
            tools:ignore="UselessParent">

            <ProgressBar
                android:id="@+id/register_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateDuration="1100"
                android:visibility="gone" />

            <com.ncsavault.utils.CircularImageView
                android:id="@+id/imgUserProfile"
                android:layout_width="200dp"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:alpha="1"
                android:src="@drawable/camera_background"
                android:visibility="gone"
                app:siBorderColor="@color/app_theme_color"
                app:siBorderWidth="@dimen/card_margin" />

        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_sing_up_with_put"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_without_uploading"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_20"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@+id/guideline16"
        app:layout_constraintRight_toLeftOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_button"
        app:layout_constraintHorizontal_bias="0.0" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/toolbar_playlist_text_size"
        android:layout_marginLeft="@dimen/toolbar_playlist_text_size"
        android:layout_marginRight="@dimen/toolbar_playlist_text_size"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/toolbar_playlist_text_size"
        android:layout_marginEnd="@dimen/toolbar_playlist_text_size">

        <com.ncsavault.wheelwidget.WheelView
            android:id="@+id/year_wheel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:visibility="gone"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="@dimen/toolbar_playlist_text_size" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>