<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">


        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />


        </android.support.design.widget.AppBarLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_below="@+id/container_toolbar"
        android:id="@+id/saved_view_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.baoyz.widget.PullRefreshLayout
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/saved_video_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/LightGrey"
                android:scrollbars="vertical" />
        </com.baoyz.widget.PullRefreshLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="@dimen/header_bar_height"
            android:layout_height="@dimen/header_bar_height"
            android:layout_centerInParent="true"
            android:indeterminateDuration="1100"
            android:theme="@style/ProgressBar"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_no_record_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_fav_video_found"
            android:textColor="@color/app_theme_color"
            android:textSize="@dimen/text_size_20"
            android:visibility="gone" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/saved_login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_login_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_login"
            android:gravity="center"
            android:text="@string/please_login_to_access"
            android:textColor="@color/app_theme_color"
            android:textSize="@dimen/text_size_15" />

        <Button
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/margin_15"
            android:layout_marginRight="@dimen/margin_15"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@drawable/button_shape_filled"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/white" />

    </RelativeLayout>

    <include
        android:id="@+id/llToast"
        layout="@layout/toast_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>